# dparallel_recursion

./: CMakeLists.txt  INSTALL.md  OLDEN_LICENSE.txt  README.md
benchmarks/: CMakeLists.txt  Matrix.h  NQueens.cpp  NQueens_dstack.cpp  NQueens_stack.cpp  barnes_hut_loc.cpp  barnes_hut_loc_stack.cpp  fib.cpp  fib_dstack.cpp  fib_stack.cpp  floorplan_stack.cpp  knapsack_stack.cpp  quicksort.cpp  quicksort_dstack.cpp  quicksort_dstack_gatherinput.cpp  quicksort_stack.cpp  strassen.cpp  topsorts.cpp  topsorts_dstack.cpp  topsorts_stack.cpp
benchmarks/EP/: CMakeLists.txt  ep.cpp
benchmarks/treeadd/: CMakeLists.txt  args.cpp  node.cpp  tree.h
benchmarks/tsp/: CMakeLists.txt  build.cpp  main.cpp  tsp.cpp  tsp.h
benchmarks/uts/: CMakeLists.txt  uts_par_rec.cpp
doc/: Doxyfile  Doxyfile.internal  Makefile  main.dox
include/dparallel_recursion/: AliasVector.h  Arity.h  Behavior.h  BufferedDInfo.h  ChunkSelector.h  DInfo.h  DRange.h  DSParConfigInfo.h  DSRange.h  EmptyBody.h  FillableAliasVector.h  Range.h  SRange.h  SRange_comm.h  dparallel_recursion.h  dparallel_stack_recursion.h  dpr_mpi_comm.h  dpr_mpi_comm_comm.h  dpr_mpi_gather_scatter.h  dpr_mpi_stack_comm.h  dpr_utils.h  general_reference_wrapper.h  parallel_recursion.h  parallel_stack_recursion.h  seq_parallel_recursion.h  seq_parallel_stack_recursion.h
mpi/: CMakeLists.txt  Matrix.h  NQueens.cpp  barnes_hut_loc.cpp  fib.cpp  quicksort.cpp  strassen.cpp
mpi/EP/: CMakeLists.txt  ep.cpp
mpi/topsorts/: CMakeLists.txt  btopsorts.c  mts.c  mts.h  mtslib.c
mpi/treeadd/: CMakeLists.txt  args.cpp  node.cpp  par-alloc.cpp  tree.h
mpi/tsp/: CMakeLists.txt  args.cpp  build.cpp  main.cpp  tsp.cpp  tsp.h
mpi/uts/: CMakeLists.txt  mpi_workstealing.c  uts.c  uts.h  uts_dm.c  uts_shm.c
mpi_cilk/: CMakeLists.txt  Matrix.h  NQueens.cpp  NQueens_opt.cpp  barnes_hut_loc.cpp  fib.cpp  fib_opt.cpp  quicksort.cpp  quicksort_opt.cpp  strassen.cpp  strassen_opt.cpp
mpi_cilk/EP/: CMakeLists.txt  ep.cpp
mpi_cilk/treeadd/: CMakeLists.txt  args.cpp  node.cpp  par-alloc.cpp  tree.h
mpi_cilk/treeadd_opt/: CMakeLists.txt  Makefile  node.cpp  par-alloc.cpp  tree.h
mpi_cilk/tsp/: CMakeLists.txt  build.cpp  tsp.cpp  tsp.h
mpi_cilk/tsp_opt/: CMakeLists.txt  Makefile  args.cpp  build.cpp  main.cpp  tsp.cpp  tsp.h
mpi_openmp/: CMakeLists.txt  Makefile  NQueens.cpp  barnes_hut_loc.cpp  fib.cpp  quicksort.cpp  strassen.cpp
mpi_openmp/EP/: CMakeLists.txt  ep.cpp
mpi_openmp/treeadd/: CMakeLists.txt  node.cpp  par-alloc.cpp
mpi_openmp/tsp/: CMakeLists.txt  build.cpp  main.cpp  tsp.cpp
scripts/: run_benchmark.sh  run_tests.sh
sequential/: CMakeLists.txt  Matrix.h  NQueens.cpp  barnes_hut_loc.cpp  fib.cpp  floorplan.cpp  knapsack.cpp  mxm_product.cpp  quicksort.cpp  strassen.cpp  topsorts.cpp
sequential/EP/: CMakeLists.txt  ep.cpp  npbparams.A.h  npbparams.B.h  npbparams.C.h  npbparams.E.h  npbparams.h
sequential/EP/common/: c_print_results.c  c_randi8.c  npb-C.h  wtime.c  wtime.h
sequential/inputs/barnes_hut/: BarnesHutB.in
sequential/inputs/topsorts/: cat42.txt  k89.txt  pm10.txt  pm16.txt  pm18.txt  pm20.txt  pm22.txt  pm6.txt  pm8.txt
sequential/inputs/uts/: sample_trees.sh
sequential/treeadd/: CMakeLists.txt  args.c  node.c  par-alloc.c  tree.h
sequential/tsp/: CMakeLists.txt  args.c  build.c  main.c  tsp.c  tsp.h
sequential/uts/: CMakeLists.txt  uts_seq.cpp
tests/: CMakeLists.txt  MyArray.h  NoisyFillableAliasVector.h  test_PrioritizeDM.cpp  test_collectives.cpp  test_distr.cpp  test_distrAddVector.cpp  test_distrAddVectorGen.cpp  test_fib.cpp  test_gatherVector.cpp  test_global.cpp  test_local.cpp  test_nqueens.cpp  test_quicksort.cpp  test_ranges.cpp  test_refs.cpp  test_replicate.cpp  test_rvalue_correctness.cpp  test_treeadd.cpp  test_user_distributed_post.cpp
